--- a/SistemasContables/packages.config
+++ b/SistemasContables/packages.config
@@ -1,12 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="DocumentFormat.OpenXml" version="2.11.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="FontAwesome.Sharp" version="5.15.3" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
+  <package id="SpreadsheetLight" version="3.5.0" targetFramework="net472" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.113.3" targetFramework="net472" />
   <package id="System.Data.SQLite" version="1.0.113.6" targetFramework="net472" />
   <package id="System.Data.SQLite.Core" version="1.0.113.6" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.113.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.113.0" targetFramework="net472" />
+  <package id="System.Drawing.Common" version="5.0.0" targetFramework="net472" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO.Packaging" version="4.7.0" targetFramework="net472" />
 </packages>
