--- a/SistemasContables/SistemasContables.csproj
+++ b/SistemasContables/SistemasContables.csproj
@@ -253,9 +253,6 @@
     <None Include="Resources\logo1.png" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\finanzas.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\icon.png" />
   </ItemGroup>
   <ItemGroup>
@@ -284,6 +281,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\edit.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\excel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
