--- a/SistemasContables/SistemasContables.csproj
+++ b/SistemasContables/SistemasContables.csproj
@@ -200,6 +200,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ReintegrarSaldoForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ReintegrarSaldoForm.Designer.cs">
+      <DependentUpon>ReintegrarSaldoForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\UsuariosForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -252,6 +258,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\ReintegrarSaldoForm.resx">
+      <DependentUpon>ReintegrarSaldoForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\UsuariosForm.resx">
       <DependentUpon>UsuariosForm.cs</DependentUpon>
     </EmbeddedResource>
