--- a/SistemasContables/SistemasContables.csproj
+++ b/SistemasContables/SistemasContables.csproj
@@ -109,6 +109,7 @@
     <Compile Include="controller\LibroDiariosController.cs" />
     <Compile Include="controller\LibroMayorController.cs" />
     <Compile Include="controller\PartidasController.cs" />
+    <Compile Include="controller\ReportesController.cs" />
     <Compile Include="DataBase\BalanceComprobacionDAO.cs" />
     <Compile Include="DataBase\BalanceGeneralDAO.cs" />
     <Compile Include="DataBase\Conexion.cs" />
@@ -119,6 +120,7 @@
     <Compile Include="DataBase\LibroDiarioDAO.cs" />
     <Compile Include="DataBase\LibroMayorDAO.cs" />
     <Compile Include="DataBase\PartidasDAO.cs" />
+    <Compile Include="DataBase\ReportesDAO.cs" />
     <Compile Include="DataBase\UsuarioDAO.cs" />
     <Compile Include="Models\Cuenta.cs" />
     <Compile Include="Models\CuentaPartida.cs" />
@@ -200,6 +202,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ReporteDeVentasForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ReporteDeVentasForm.Designer.cs">
+      <DependentUpon>ReporteDeVentasForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\UsuariosForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -252,6 +260,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\ReporteDeVentasForm.resx">
+      <DependentUpon>ReporteDeVentasForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\UsuariosForm.resx">
       <DependentUpon>UsuariosForm.cs</DependentUpon>
     </EmbeddedResource>
