--- a/SistemasContables/SistemasContables.csproj
+++ b/SistemasContables/SistemasContables.csproj
@@ -202,6 +202,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\ReporteDeTransacciones.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\ReporteDeTransacciones.Designer.cs">
+      <DependentUpon>ReporteDeTransacciones.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\ReporteDeVentasForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -260,6 +266,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Views\ReporteDeTransacciones.resx">
+      <DependentUpon>ReporteDeTransacciones.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\ReporteDeVentasForm.resx">
       <DependentUpon>ReporteDeVentasForm.cs</DependentUpon>
     </EmbeddedResource>
